@@ -1,3 +1,8 @@
+2008-04-14  Katsutoshi Itoh <cut-sea@kahua.org>
+
+	* Change: plugins/dsl-simple.scm
+		  change macros to functions.
+	
 2008-04-09  Katsutoshi Itoh <cut-sea@kahua.org>
 
 	* Change: plugins/dsl-simple.scm
